; ModuleID = '/home/carl/AnghaBench/timescaledb/src/bgw/extr_job.c_lock_job.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/bgw/extr_job.c_lock_job.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MyDatabaseId = common dso_local global i32 0, align 4
@SESSION_LOCK = common dso_local global i64 0, align 8
@LOCKACQUIRE_NOT_AVAIL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i64, i32*, i32)* @lock_job to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lock_job(i32 %0, i32 %1, i64 %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load i32*, i32** %9, align 8
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @MyDatabaseId, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @TS_SET_LOCKTAG_ADVISORY(i32 %12, i32 %13, i32 %14, i32 0)
  %16 = load i32*, i32** %9, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load i64, i64* %8, align 8
  %19 = load i64, i64* @SESSION_LOCK, align 8
  %20 = icmp eq i64 %18, %19
  %21 = zext i1 %20 to i32
  %22 = load i32, i32* %10, align 4
  %23 = icmp ne i32 %22, 0
  %24 = xor i1 %23, true
  %25 = zext i1 %24 to i32
  %26 = call i64 @LockAcquire(i32* %16, i32 %17, i32 %21, i32 %25)
  %27 = load i64, i64* @LOCKACQUIRE_NOT_AVAIL, align 8
  %28 = icmp ne i64 %26, %27
  %29 = zext i1 %28 to i32
  ret i32 %29
}

declare dso_local i32 @TS_SET_LOCKTAG_ADVISORY(i32, i32, i32, i32) #1

declare dso_local i64 @LockAcquire(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
